# hermes-antigravity-auth

./: .gitignore  AGENTS.MD  MANIFEST.in  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
antigravity_auth/: AGENTS.md  __init__.py  _credentials.py.example  _time_utils.py  _version.py  cli.py  config.py  constants.py  credentials.py  debug.py  doctor.py  endpoints.py  fingerprint.py  hermes_compat.py  hermes_plugin.py  hermes_provider_plugin.py  install_plugins.py  interceptor.py  oauth.py  package_info.py  plugin_contract.py  recovery.py  redaction.py  search.py  selftest.py  storage.py  test_claude_transforms.py  test_cli.py  test_config.py  test_credentials.py  test_debug.py  test_doctor.py  test_fingerprint.py  test_hermes_compat.py  test_hermes_migration.py  test_hermes_plugin.py  test_inject_tool_call_ids.py  test_interceptor.py  test_oauth.py  test_plugin_contract.py  (+13 more)
antigravity_auth/accounts/: manager.py  quota.py  quota_display.py  ratelimit.py  rotation.py  state.py  test_manager.py  test_quota_display.py  test_ratelimit.py  test_rotation.py
antigravity_auth/transform/: __init__.py  envelope.py  messages.py  response.py  schema.py  test_envelope.py  test_messages.py  test_response.py  test_schema.py  test_thinking.py  thinking.py
docs/: ANTIGRAVITY_API_SPEC.md  ARCHITECTURE.md  PLUGIN_WRAPPER_CONTRACT.md
docs/plans/: 2026-05-21-remaining-features.md  2026-05-21-review-fixes.md  2026-05-21-round3-cleanup.md  2026-05-27-antigravity-plugin-remediation.md  2026-05-28-antigravity-gap-remediation.md
plugins/antigravity_tools/: __init__.py  plugin.yaml
plugins/model-providers/antigravity/: __init__.py  plugin.yaml
src/plugin/: AGENTS.md
