[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-antigravity-auth"
version = "1.6.0"
description = "Hermes Agent plugin for Antigravity (Google IDE) OAuth model access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["hermes", "antigravity", "oauth", "google", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  # pyyaml is optional - config falls back to defaults if not installed
]
[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.entry-points."hermes_agent.plugins"]
antigravity-cli = "antigravity_auth.hermes_plugin"

[project.scripts]
hermes-antigravity-install = "antigravity_auth.install_plugins:main"

[tool.setuptools.packages.find]
include = ["antigravity_auth*"]
